# AKROS_bridge

./: .gitignore  AKROS_bridge.code-workspace  AKROS_bridge_ws.code-workspace  CMakeLists.txt  README.md  package.xml
AKROS_bridge/: CMakeLists.txt  README.md  package.xml
AKROS_bridge/rosbag/20201022/: 20201022_004.bag
AKROS_bridge/rosbag/20201023/: 20201023_006.bag  20201023_008.bag
AKROS_bridge/rosbag/20201105/: 20201105_001.bag
AKROS_bridge/rosbag/20201229/: 20201229_001.bag  20201229_002.bag  20201229_003.bag  20201229_004.bag  20201229_005.bag
AKROS_bridge_can/: CMakeLists.txt  package.xml
AKROS_bridge_can/include/AKROS_bridge_can/: basic_op.h
AKROS_bridge_can/src/: AKROS_bridge_can.cpp  basic_op.cpp
AKROS_bridge_controller/: CMakeLists.txt  README.md  package.xml
AKROS_bridge_controller/config/: config_template.yaml  robot_config.yaml  single_motor_config.yaml  testbed_config.yaml
AKROS_bridge_controller/include/AKROS_bridge_controller/: Prototype2020.h  Prototype2020_BaseController.h  initialize_settings.h
AKROS_bridge_controller/launch/: initialize_robot.launch  initialize_single.launch  initialize_testbed.launch
AKROS_bridge_controller/src/: bending_stretching.cpp  check_rosparam.cpp  single_motor_controller.cpp
AKROS_bridge_controller/src/Prototype2020/: CMakeLists.txt  JointsMove.cpp  LegMove.cpp  LegMove_joypad.cpp  Prototype2020_BaseController.cpp  WheelMove.cpp  WheelMove_teleop.cpp  bending_stretching.cpp  bending_stretching_angle.cpp  bending_stretching_offset.cpp  bending_stretching_wheel.cpp  footPosition_Publisher.cpp  hopping.cpp  hopping_wheel.cpp  initialPose.cpp  initialPose_new.cpp
AKROS_bridge_controller/src/Prototype2020/new/: JointsMove_new.cpp  WheelMove_new.cpp  bending_stretching_new.cpp  initialPose_new.cpp
AKROS_bridge_controller/src/initialize/: initialize.cpp
AKROS_bridge_controller/src/test_controller_node/: CMakeLists.txt  motor_controller.cpp  move_to_zero.cpp  single_motor_controller.cpp  wheel_velocity_controller.cpp
AKROS_bridge_controller/src/tweak/: main.cpp  tweak.cpp  tweak.h
AKROS_bridge_converter/: CMakeLists.txt  README.md  package.xml
AKROS_bridge_converter/include/AKROS_bridge_converter/: AKROS_bridge_converter.h  basic_op.h  converter.h  general_settings.h  motor_config.h  motor_status.h  tweak_control.h
AKROS_bridge_converter/include/AKROS_bridge_converter/motors/: AK10-9.h  AK10-9_old.h  AK80-6.h  AK80-6_old.h
AKROS_bridge_converter/src/: AKROS_bridge_converter.cpp  basic_op.cpp  check_value.cpp  converter.cpp  main.cpp  overflow_modifier.cpp  test_pub.cpp
AKROS_bridge_msgs/: CMakeLists.txt  README.md  package.xml
AKROS_bridge_msgs/msg/: can_msg.msg  motor_can_cmd.msg  motor_can_cmd_single.msg  motor_can_reply.msg  motor_can_reply_single.msg  motor_can_reply_timestamped.msg  motor_cmd.msg  motor_cmd_single.msg  motor_cmd_timestamped.msg  motor_reply.msg  motor_reply_single.msg  motor_reply_timestamped.msg
AKROS_bridge_msgs/srv/: Initialize.srv  Initialize_can.srv  Initialize_lock.srv  currentState.srv  currentState_can.srv  enter_control_mode.srv  finalize.srv  motor_config.srv  servo_setting.srv  tweak.srv
AKROS_bridge_ros/: CMakeLists.txt  README.md  package.xml
AKROS_bridge_ros/launch/: connect.launch  motor_control.launch
include/: AK80_6.h
launch/: comm_test.launch  connect.launch  single_motor_control.launch
mbed/: .gitignore  AKROS_bridge_mbed.code-workspace  README.md  create_ros_lib.sh  makefile  rosserial_mbed_memo.txt  value_check  value_check.cpp
mbed/AKROS_bridge/: AKROS_bridge_mbed.cpp
mbed/AKROS_bridge/CAN_controller/: CAN_controller.cpp  CAN_controller.h
mbed/AKROS_bridge/NUCLEO_F446RE/: AKROS_bridge_mbed.d  AKROS_bridge_mbed.disasm  AKROS_bridge_mbed.elf  AKROS_bridge_mbed.hex  gcc4mbed.d
mbed/AKROS_bridge/NUCLEO_F446RE/CAN_controller/: CAN_controller.d
mbed/AKROS_bridge/NUCLEO_F446RE/basic_op/: basic_op.d
mbed/AKROS_bridge/basic_op/: basic_op.cpp  basic_op.h
mbed/AKROS_bridge_can_mbed/CAN_controller/: CAN_controller.cpp
mbed/AKROS_bridge_mbed/: AKROS_bridge_can_mbed.cpp  AKROS_bridge_mbed.cpp  makefile
mbed/AKROS_bridge_mbed/CAN_controller/: CAN_controller.h
mbed/AKROS_bridge_mbed/master_backup/: AKROS_bridge_mbed.disasm  AKROS_bridge_mbed.elf
mbed/ROS_mbed/: ROS_mbed.cpp  makefile
mbed/ROS_mbed/master/: AKROS_bridge_mbed.hex  ROS_mbed.d  gcc4mbed.d
mbed/ROS_mbed_single/: ROS_mbed_single.cpp  makefile
mbed/ROS_mbed_single/NUCLEO_F303K8/: ROS_mbed_single.d  ROS_mbed_single.disasm  ROS_mbed_single.elf  ROS_mbed_single.hex  gcc4mbed.d
mbed/can/: AKROS_bridge_can_mbed.cpp  makefile
mbed/can_single/: AKROS_bridge_can_mbed_single.cpp  makefile
mbed/include/: config.h  general_settings.h
mbed/include/AKROS_bridge/: AKROS_bridge.cpp  AKROS_bridge.h
mbed/include/AKROS_bridge_class/: AKROS_bridge_class.cpp  AKROS_bridge_class.h
mbed/include/CAN_controller/: CAN_controller.cpp  CAN_controller.h
mbed/include/Release/NUCLEO_F303K8/CAN_controller/: CAN_controller.d
mbed/include/Release/NUCLEO_F303K8/basic_op/: basic_op.d
mbed/include/basic_op/: basic_op.cpp  basic_op.h
mbed/include/motor_status/: motor_status.cpp  motor_status.h
mbed/pubsub/: makefile  pubsub.cpp
mbed/pubsub/NUCLEO_F446RE/: pubsub.d  pubsub.disasm  pubsub.elf  pubsub.hex
mbed/slave/: makefile  slave.cpp
mbed/slave/NUCLEO_F303K8/: slave.d  slave.disasm  slave.elf  slave.hex
msg/: motor_cmd.msg  motor_cmd_single.msg  motor_reply.msg
rosbag/: 20201022_002.bag  20201022_003.bag  20201103_001.bag
rosbag/20201022/: 20201022_001.bag
rosbag/20201023/: 20201023_001.bag  20201023_002.bag  20201023_003.bag  20201023_004.bag  20201023_005.bag  20201023_007.bag  20201023_009.bag
src/: AK80_6.cpp  motor_value_converter.cpp
src/test_pub/: motor_cmd_test_pub.cpp
src/test_pub_node/: enter_control_mode_client.cpp  exit_control_mode_client.cpp  motor_can_reply_test_pub.cpp  motor_cmd_test_pub.cpp  motor_controller.cpp  set_position_zero_client.cpp  single_motor_controller.cpp  single_motor_controller2.cpp
srv/: Initialize.srv  Initialize_single.srv
