<?xml version="1.0"?>
<package format="2">
  <name>AKROS_bridge</name>
  <version>0.0.0</version>
  <description>
    Package for controll AK-motor via ROS1 (metapackage).
  </description>
  <maintainer email="f.thlover398@gmail.com">fal</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>AKROS_bridge_converter</exec_depend>
  <exec_depend>AKROS_bridge_msgs</exec_depend>
  <exec_depend>AKROS_bridge_ros</exec_depend>
  <exec_depend>AKROS_bridge_controller</exec_depend>
  <export><metapackage/></export>
</package>
